--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
 <table border="0" cellpadding="0" cellspacing="0">
 <tr><td><img width = "100" src="img/Ampeliotis.jpg" border="1"></td>
 <td valign="bottom"><font face="Comic Sans MS" size="4"><blockquote>
-<b>Assistant Professor, Ionian University, <A HREF="https://dmc.ionio.gr/el/">Department of Digital Media and Communication</A><BR>
-<b>Associate Researcher, University of Patras, <A HREF="http://xanthippi.ceid.upatras.gr/courses/home/home_en.php">SPC-LAB</A><BR>
+<b>Assistant Professor, Ionian University, <A HREF="https://dmc.ionio.gr/en/">Department of Digital Media and Communication</A><BR>
 </blockquote>
 </font>
 </td></tr></table>
@@ -113,6 +112,9 @@
 <center>
 <b>Short CV</b>
 <TABLE WIDTH="700">
+
+
+	<TR><TD ALIGN="RIGHT" VALIGN="TOP"><B>2021-now:</B></TD><TD ALIGN="LEFT">Assistant Professor, Ionian University, <A HREF="https://dmc.ionio.gr/en/">Department of Digital Media and Communication</A></BR>Associate Researcher, University of Patras</TD></TR>
 
 <TR><TD ALIGN="RIGHT" VALIGN="TOP"><B>2010-2020:</B></TD><TD ALIGN="LEFT">Post-Doc Researcher, University of Patras / CTI<BR>Adjunct Lecturer, University of Patras<BR>Adjunct Lecturer, TEI of Western Greece.</TD></TR>
 
@@ -137,7 +139,7 @@ under the supervision of <A HREF="http://xanthippi.ceid.upatras.gr/people/berber
 </font>
 <table border="0" cellspacing="0" cellpadding="0" width="100%"><tr><td align="left">
 <font face="Comic Sans MS" size="2">
-<b>e-mails:</b></BR>ampeliot AT ceid DOT upatras DOT gr<BR>dampeliot AT gmail DOT com</BR>
+<b>e-mails:</b></BR>ampeliotis AT ionio.gr</BR>ampeliot AT ceid DOT upatras DOT gr<BR>dampeliot AT gmail DOT com</BR>
 <b>other sites:</b></BR>
 <a href="https://orcid.org/0000-0002-4138-6152" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-4138-6152</a></BR>
 <a href="https://scholar.google.gr/citations?user=XhcXJ-cAAAAJ&hl=el&oi=ao" target="_blank">Google Scholar</a></BR>
