--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 
 <!-- Το αρχικό div με το σύντομο βιογραφικό -->
 <div id="home" style="display: block; position: absolute; top:130;left: 10%; width: 80%;background-color:#FFFFFF;">
+<center>
 <table border="0" cellpadding="0" cellspacing="0">
 <tr><td><img width = "100" src="img/Ampeliotis.jpg" border="1"></td>
 <td valign="bottom"><font face="Comic Sans MS" size="4"><blockquote>
@@ -107,6 +108,7 @@
 </blockquote>
 </font>
 </td></tr></table>
+</center>
 <BR>
 <font face="Comic Sans MS" size="4">
 <center>
