--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <table border="0" cellpadding="0" cellspacing="0">
 <tr><td><img width = "100" src="img/Ampeliotis.jpg" border="1"></td>
 <td valign="bottom"><font face="Comic Sans MS" size="4"><blockquote>
-<b>Assistant Professor, Ionian University, <A HREF="https://dmc.ionio.gr/en/">Department of Digital Media and Communication</A><BR>
+<b>Assistant Professor, Ionian University, <A HREF="https://dmc.ionio.gr/en/home/">Department of Digital Media and Communication</A><BR>
 </blockquote>
 </font>
 </td></tr></table>
@@ -116,7 +116,7 @@
 <TABLE WIDTH="700">
 
 
-	<TR><TD ALIGN="RIGHT" VALIGN="TOP"><B>2021-now:</B></TD><TD ALIGN="LEFT">Assistant Professor, Ionian University, <A HREF="https://dmc.ionio.gr/en/">Department of Digital Media and Communication</A></BR>Associate Researcher, University of Patras</TD></TR>
+	<TR><TD ALIGN="RIGHT" VALIGN="TOP"><B>2021-now:</B></TD><TD ALIGN="LEFT">Assistant Professor, Ionian University, <A HREF="https://dmc.ionio.gr/en/home/">Department of Digital Media and Communication</A></BR>Associate Researcher, University of Patras</TD></TR>
 
 <TR><TD ALIGN="RIGHT" VALIGN="TOP"><B>2010-2020:</B></TD><TD ALIGN="LEFT">Post-Doc Researcher, University of Patras / CTI<BR>Adjunct Lecturer, University of Patras<BR>Adjunct Lecturer, TEI of Western Greece.</TD></TR>
 
