--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <TR><TD ALIGN="RIGHT" VALIGN="TOP"><B>2009-2010:</B></TD><TD ALIGN="LEFT">Military Service</TD></TR>
 
-<TR><TD ALIGN="RIGHT" VALIGN="TOP"><B>2004-2009:</B></TD><TD ALIGN="LEFT"> Ph.D. degree, Computer Engineering & Informatics Department, University of Patras, in the field of Digital Communications & Signal Processing,
+<TR><TD ALIGN="RIGHT" VALIGN="TOP"><B>2004-2009:</B></TD><TD ALIGN="LEFT"> Ph.D. degree, Computer Engineering and Informatics Department, University of Patras, in the field of Digital Communications and Signal Processing,
 
 under the supervision of <A HREF="http://xanthippi.ceid.upatras.gr/people/berberidis/index.php">Professor Kostas Berberidis</A>
 
