--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 <div style="position: absolute; left: 0; right: 0;top:207; width: 100%;background-color:#e9e9e9;height:1px"></div>
 <div style="position: absolute; left: 0; right: 0;top:208; width: 100%;background-color:#eaeaea;height:1px"></div>
 <div style="position: absolute; left: 0; right: 0;top:209; width: 100%;background-color:#ebebeb;height:1px"></div>
-<div style="position: absolute; top: 62; left: 10%; width 80%;">
-<font face="Comic Sans MS" size="6">Dimitris Ampeliotis, Phd</font>
+<div style="position: absolute; top: 62; left: 10%; width: 80%;">
+<font face="Comic Sans MS" size="6">Dimitris Ampeliotis, PhD</font>
 </div>
 
 
