fixed index html

--- a/index.html
+++ b/index.html
@@ -151,13 +151,12 @@
 <ul>
 <li>Coordinator of the Internal Evaluation Committee for Quality Assurance of the Department</li>
 <li>Coordinator of the Intenship Program of the Department</li>
-<li>Deputy Coordinator of the Erasmus Program of the Department</li>
 </ul>
 <b>Collaborations:</b><br>
 <ul>
-<li><b style="font-size:12pt;">Associate Researcher, <A HREF="http://spclab.ceid.upatras.gr/" target="_blank">Signal Processing and Communications Lab</A>, <A HREF="https://www.ceid.upatras.gr/en" target="_blank">Computer Engineering and Informatics Department</A>, <A HREF="https://www.upatras.gr/en/" target="_blank">University of Patras</A></b>
-<li><b style="font-size:12pt;">Associate Researcher, <A HREF="https://dsip.ece.upatras.gr/" target="_blank">Digital Signal and Image Processing Laboratory</A>, <A HREF="https://www.ece.upatras.gr/index.php/en/" target="_blank">Department of Electrical and Computer Engineering</A>, <A HREF="https://www.upatras.gr/en/" target="_blank">University of Patras</A></b>
-<li><b style="font-size:12pt;">Collaborating Academic Faculty, <A HREF="https://mips.isi.gr/" target="_blank">Multimedia Information Processing Systems Group</A>, <A HREF="https://www.isi.gr/" target="_blank">Industrial Systems Institute</A></b>
+<li><b style="font-size:12pt;">Associate Researcher, <A HREF="http://spclab.ceid.upatras.gr/" target="_blank">Signal Processing and Communications Lab</A>, <A HREF="https://www.ceid.upatras.gr/en" target="_blank">Computer Engineering and Informatics Department</A>, <A HREF="https://www.upatras.gr/en/" target="_blank">University of Patras</A>, Greece</b>
+<li><b style="font-size:12pt;">Associate Researcher, <A HREF="https://dsip.ece.upatras.gr/" target="_blank">Digital Signal and Image Processing Laboratory</A>, <A HREF="https://www.ece.upatras.gr/index.php/en/" target="_blank">Department of Electrical and Computer Engineering</A>, <A HREF="https://www.upatras.gr/en/" target="_blank">University of Patras</A>, Greece</b>
+<li><b style="font-size:12pt;">Collaborating Academic Faculty, <A HREF="https://mips.isi.gr/" target="_blank">Multimedia Information Processing Systems Group</A>, <A HREF="https://www.isi.gr/" target="_blank">Industrial Systems Institute</A>, Greece</b>
 </ul>
 </blockquote>
 </font>
